# NewscastNavigator

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  compose.yaml
.github/: pull_request_template.md
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  captionpanels.py  editor.py  exports.py  health.py  projects.py  revisions.py  users.py  workspace.py
backend/app/core/: config.py  security.py  version.py
backend/app/db/: models.py  session.py
backend/app/schemas/: auth.py  captionpanels_import.py  captionpanels_integration.py  editor.py  project.py  revisions.py  story_exchange.py  user.py  workspace.py
backend/app/services/: auth_service.py  bootstrap.py  export_service.py  legacy_import.py  project_access.py  project_events.py  project_queries.py  project_revisions.py  runtime_setup.py  segment_ids.py  structured_fields.py
backend/migrations/: README  env.py
backend/migrations/versions/: 20260216_0001_initial_users_projects.py  20260216_0002_script_elements.py  20260217_0003_project_workspace.py  20260315_0004_workflow_foundation.py  20260319_0005_editor_extensibility.py  20260325_0006_segment_uids.py  20260325_0007_rich_text_json.py  20260326_0008_project_revisions.py
backend/scripts/: bootstrap_runtime.py  import_legacy_sqlite.py
backend/tests/: conftest.py  test_api_smoke.py  test_auth_legacy_password.py  test_legacy_import.py
(+107 files in other folders)
